--- a/src/components/Main/main.module.scss
+++ b/src/components/Main/main.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   width: 100%;
-  height: calc(100vh - 136px);
+  height: calc(100vh - 8.5rem);
   position: relative;
   overflow: hidden;
 
@@ -12,10 +12,10 @@
 .arrowTop {
   background-color: #ccc;
   position: absolute;
-  width: 139px;
-  height: 48px;
+  width: 8.6875rem;
+  height: 3rem;
   top: 0;
-  left: calc(50% - 70px);
+  left: calc(50% - 4.375rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,18 +23,18 @@
   user-select: none;
 
   img {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
 
 .arrowBottom {
   background-color: #ccc;
   position: absolute;
-  width: 139px;
-  height: 48px;
+  width: 8.6875rem;
+  height: 3rem;
   bottom: 0;
-  left: calc(50% - 70px);
+  left: calc(50% - 4.375rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,18 +42,18 @@
   user-select: none;
 
   img {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
 
 .arrowLeft {
   background-color: #ccc;
   position: absolute;
-  height: 139px;
-  width: 48px;
+  height: 8.6875rem;
+  width: 3rem;
   left: 0;
-  top: calc(50% - 64px);
+  top: calc(50% - 4rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,18 +61,18 @@
   user-select: none;
 
   img {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
 
 .arrowRight {
   background-color: #ccc;
   position: absolute;
-  height: 139px;
-  width: 48px;
+  height: 8.6875rem;
+  width: 3rem;
   right: 0;
-  top: calc(50% - 64px);
+  top: calc(50% - 4rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,14 +80,14 @@
   user-select: none;
   
   img {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
 
 .draggable {
-  padding-top: 100px;
+  padding-top: 6.25rem;
   width: max-content;
   position: relative;
-  left: calc(50% - 71px);
+  left: calc(50% - 4.4375rem);
 }
