--- a/src/components/Head/head.module.scss
+++ b/src/components/Head/head.module.scss
@@ -3,46 +3,46 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 45px 55px 33px 45px;
+  padding: 2.8125rem 3.4375rem 2.0625rem 2.8125rem;
   box-sizing: border-box;
 }
 
 .leftSide {
   display: flex;
-  column-gap: 7px;
+  column-gap: 0.4375rem;
   align-items: center;
 }
 
 .leftText {
-  font-size: 33px;
+  font-size: 2.0625rem;
   font-family: 'Poppins';
   margin: 0;
 }
 
 .amount {
-  width: 28px;
-  height: 28px;
+  width: 1.75rem;
+  height: 1.75rem;
   background-color: #f9b631;
   color: white;
-  font-size: 16px;
-  border-radius: 10px;
+  font-size: 1rem;
+  border-radius: 0.625rem;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0;
   margin: 0;
-  margin-top: 3px;
+  margin-top: 0.1875rem;
 }
 
 .rightSide {
   display: flex;
-  column-gap: 5px;
+  column-gap: 0.3125rem;
 }
 
 .rightButton {
-  width: 48px;
-  height: 48px;
+  width: 3rem;
+  height: 3rem;
   background-color: transparent;
   display: flex;
   padding: 0;
@@ -54,7 +54,7 @@
   transition: all 0.5s;
 
   p {
-    font-size: 27px;
+    font-size: 1.6875rem;
     color: #a3bcc7;
     margin: 0;
     padding: 0;
@@ -70,8 +70,8 @@
 }
 
 .rightButtonWithImage {
-  width: 48px;
-  height: 51px;
+  width: 3rem;
+  height: 3.1875rem;
   background-color: transparent;
   display: flex;
   padding: 0;
@@ -80,12 +80,12 @@
   align-items: center;
   border: 0;
   outline: none;
-  margin-right: 9px;
+  margin-right: 0.5625rem;
   position: relative;
 
   img {
-    width: 30px;
-    height: 30px;
+    width: 1.875rem;
+    height: 1.875rem;
     margin: 0;
     padding: 0;
   }
@@ -103,8 +103,8 @@
 }
 
 .rightMiddleButton {
-  width: 87px;
-  height: 48px;
+  width: 5.4375rem;
+  height: 3rem;
   background-color: transparent;
   display: flex;
   padding: 0;
@@ -117,11 +117,11 @@
   position: relative;
 
   p {
-    font-size: 16px;
+    font-size: 1rem;
     color: #a3bcc7;
     margin: 0;
     padding: 0;
-    margin-top: 5px;
+    margin-top: 0.3125rem;
   }
 
   &:hover {
@@ -135,14 +135,14 @@
 
 .coloredButton {
   background-color: #6970db;
-  width: 105px;
-  height: 54px;
+  width: 6.6525rem;
+  height: 3.375rem;
   border: none;
   outline: none;
-  margin-right: 7px;
+  margin-right: 0.4375rem;
 
   p {
-    font-size: 13px;
+    font-size: 0.8125rem;
     color: white;
     text-transform: uppercase;
   }
@@ -155,27 +155,27 @@
 .tooltipWrapper {
   position: absolute;
   bottom: 0;
-  bottom: -65px;
+  bottom: -4.0625rem;
 }
 
 .tooltip {
   position: relative;
   display: inline-block;
-  padding: 10px;
+  padding: 0.625rem;
   background-color: #a3bcc7;
   color: #fff;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   text-align: center;
-  font-size: 13px;
-  width: 88px;
+  font-size: 0.8125rem;
+  width: 5.5rem;
 
   &::before {
     content: "";
     position: absolute;
-    top: -18px; 
+    top: -1.125rem; 
     left: 50%; 
     transform: translateX(-50%); 
-    border-width: 10px;
+    border-width: 0.625rem;
     border-style: solid;
     border-color: transparent transparent #a3bcc7 transparent;
   }
@@ -183,8 +183,8 @@
 
 .dropdown {
   position: absolute;
-  top: 64px;
-  left: -6px;
+  top: 4rem;
+  left: -0.375rem;
   display: flex;
   flex-direction: column;
 }
@@ -193,21 +193,21 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  column-gap: 5px;
-  width: 100px;
-  height: 32px;
+  column-gap: 0.3125rem;
+  width: 6.25rem;
+  height: 2rem;
   align-items: center;
   border: none;
   outline: none;
 
   p {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   img {
-    width: 14px;
-    height: 14px;
-    margin-top: 4px;
+    width: 0.875rem;
+    height: 0.875rem;
+    margin-top: 0.25rem;
   }
 
   &:hover {
